--- a/src/input.css
+++ b/src/input.css
@@ -11,3 +11,37 @@
 body {
   overflow-x: hidden;
 }
+
+@media not all and (min-width: 426px) {
+  .nav-menu {
+    display: none;
+  }
+
+  .nav-menu.active {
+    display: flex;
+    backdrop-filter: brightness(0.75);
+    height: 1000vh;
+  }
+
+  .nav-bar.active {
+  }
+
+  .hamburger-button {
+    display: flex;
+  }
+
+  .hamburger-button.active {
+    display: none;
+  }
+
+  .close-button {
+    display: none;
+  }
+
+  .close-button.active {
+    display: flex;
+  }
+
+  body.active {
+  }
+}
